syntax = "proto3";

package token;

option go_package = "./auth";

service Token {
  rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message GenerateTokenRequest {
  string email = 1;
  int64 user_id = 2;
}

message GenerateTokenResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string error = 2;
}